--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <p id="subtitle" class="sub">I’m Lorena! And I like turning warm and cold leads into real conversations (with some laughs on the way).</p>
 
     <div id="pills" class="grid" aria-label="Why me">
-      <span class="pill">☕ Coffee, cats & gaming person (cliché but true)</span>
+      <span class="pill">🔥 One of the founding Hotjar SDRs(</span>
       <span class="pill">😂 Outreach with questionable jokes (and it works)</span>
       <span class="pill">🧪 Tested warmbound in different teams (also inbound + outbound)</span>
       <span class="pill">📈 Solid reply rates, not spray & pray</span>
