--- a/index.html
+++ b/index.html
@@ -38,22 +38,24 @@
 <body>
   <div class="card">
     <h1 id="headline">Heard that coding is important. Now I'm learning how to "code outreach" 🦔</h1>
-    <p id="subtitle" class="sub">I’m Lorena! And I like turning warm and cold leads into real conversations (with some laughs on the way).</p>
+    <p id="subtitle" class="sub">I’m Lorena! And I like turning both warm and cold prospects into real conversations (with some laughs on the way). Heard that PostHog is looking for a founding BDR and I knew that everybody would reach out via email or LinkedIn. 
+    Also, this mini website is being tracked using PostHog ;)
+    </p>
 
     <div id="pills" class="grid" aria-label="Why me">
       <span class="pill">🔥 One of the founding Hotjar SDRs</span>
-      <span class="pill">😂 Outreach with questionable jokes (and it works)</span>
-      <span class="pill">🧪 Tested warmbound in different teams (also inbound + outbound)</span>
-      <span class="pill">📈 Solid reply rates, not spray & pray</span>
-      <span class="pill">🎯 Reached & converted “allergic-to-people” prospects</span>
+      <span class="pill">😂 Outreach with questionable jokes without burning the brand</span>
+      <span class="pill">🧪 Successfuly tested warmbound in different teams (also experienced in both inbound + outbound)</span>
+      <span class="pill">📈 Solid reply rates with the right buying intent signals, not spraying & praying</span>
+      <span class="pill">🎯 Reached & converted “allergic-to-people” prospects (60%+ conversion rate)</span>
     </div>
 
     <div class="btns">
-      <button id="hire" aria-label="We want Lorena">We want Lorena</button>
+      <button id="hire" aria-label="Learn more about Lorena">Learn more about Lorena</button>
       <button id="nope" aria-label="Go with someone else">Go with someone else 🙃</button>
     </div>
 
-    <div class="flag">Feature flag → <strong id="flagLabel">Ask Lorena to Join Us</strong>: <span id="flag">OFF</span></div>
+    <div class="flag">Feature flag → <strong id="flagLabel">Learn more about Lorena</strong>: <span id="flag">OFF</span></div>
 
     <footer>
       Still unsure? Check more details on my LinkedIn. <a id="linkedin" href="https://www.linkedin.com/in/lorenaviana" target="_blank" rel="noopener">/lorenaviana</a>
