--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
 <body>
   <div class="card">
     <h1 id="headline">Heard that coding is important. Now I'm learning how to "code outreach" 🦔</h1>
-    <p id="subtitle" class="sub">I’m Lorena! And I like turning both warm and cold prospects into real conversations (with some laughs on the way). Heard that PostHog is looking for a founding BDR and I knew that everybody would reach out via email or LinkedIn. 
-    Also, this mini website is being tracked using PostHog ;)
+    <p id="subtitle" class="sub">I’m Lorena! And I like turning both warm and cold prospects into real conversations (with some laughs on the way). 
+        Heard that PostHog is looking for a founding BDR and I knew that everybody would reach out via email or LinkedIn. That would be too easy. If you had at least a little fun with this mini website, please click on the green button.
+        Also, this mini website is being tracked using PostHog ;)
     </p>
 
     <div id="pills" class="grid" aria-label="Why me">
