--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <h1 id="headline">Heard that coding is important. Now I'm learning how to "code outreach" 🦔</h1>
     <p id="subtitle" class="sub">I’m Lorena! I convert people (from prospects to customers).
         
-        Everybody will reach out via email or LinkedIn for the PostHog BDR role (that would be too easy). 
+        Everybody will reach out via email or LinkedIn for the PostHog BDR role (that would be too obvious). 
         
         Also, this mini website is being tracked using PostHog ;) Enjoy! 
     </p>
